Cloud mobile and desktop + fix on header + card border on mobile app

--- a/css/common.css
+++ b/css/common.css
@@ -140,9 +140,10 @@ li {
   line-height: 100%;
 }
 
-li p {
+li p,
+.list-p {
   font-family: "Red Hat Display", sans-serif;
-  font-weight: 400;
+  font-weight: 645;
   font-style: normal;
   font-size: 18px;
   text-align: left;
@@ -589,6 +590,10 @@ Text Color
 
 .non-decorated-text {
   text-decoration: none !important;
+}
+
+.strong-text {
+  font-weight: 645 !important;
 }
 
 .pink-bg {
